--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8083
 spring.profiles.active=dev
+#------------------jackson-----------------------
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 #------------------mybatis-----------------------
 mybatis.mapper-locations=classpath*:/mapper/*Mapper.xml
 mybatis.type-aliases-package=com.telecomyt.item.entity
