--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <mybatis.version>2.1.0</mybatis.version>
         <druid.version>1.1.9</druid.version>
         <guava.version>20.0</guava.version>
+        <hutool.version>4.3.0</hutool.version>
         <commons-collections.verison>3.2.2</commons-collections.verison>
     </properties>
 
@@ -74,6 +75,12 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>${commons-collections.verison}</version>
+        </dependency>
+        <!--hutool-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
         </dependency>
     </dependencies>
 
