--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <pagehelper.version>1.2.10</pagehelper.version>
         <!--推荐的mybatis-spring是2.1.0 会导致 映射LocalDateTime
          类型报 SQLFeatureNotSupportedException 异常-->
-        <mybatis.version>2.0.0</mybatis.version>
+        <mybatis.version>1.3.2</mybatis.version>
         <druid.version>1.1.17</druid.version>
         <guava.version>20.0</guava.version>
         <hutool.version>4.3.0</hutool.version>
@@ -84,6 +84,12 @@
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.baomidou</groupId>-->
+<!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
+<!--            <version>3.1.0</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
