--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,15 @@ mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=25000
 mybatis.configuration.aggressiveLazyLoading=false
 #------------------logging--------------------
-logging.level.com.telecomyt.item.web.mapper=debug
+logging.level.com.telecomyt.item=debug
+#logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss.SSS} [ %level ] [ %thread ] %class{1} - %M %L - %msg%xEx%n"
+logging.file=log/item.log
 #------------------pagehelper-----------------------
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
+#------------------custom-----------------------
+info.build.artifact="@project.artifactId@"
+info.build.name="@project.build.finalName@"
+info.build.description="@project.description@"
+info.build.version="@project.version@"
