--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.telecomyt.item</groupId>
+    <artifactId>item</artifactId>
+    <version>1.0.0</version>
+    <name>item</name>
+    <description>Schedule and tasks</description>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.telecomyt.item</groupId>
-    <artifactId>item</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>item</name>
-    <description>Demo project for Spring Boot</description>
 
     <properties>
         <skipTests>true</skipTests>
@@ -103,6 +105,22 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>*.xml</include>
+                    <include>mapper/**</include>
+                    <include>templates/**</include>
+                    <include>static/**</include>
+                    <include>*.properties</include>
+                    <include>*.yml</include>
+                    <include>*.key</include>
+                    <include>*.txt</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
