--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,20 +2,41 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
-          url: jdbc:mysql://localhost:3306/dxyt?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+          url: jdbc:mysql://localhost:3306/item?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
           username: root
-          password: 123@Root
+          password: 123456
           driver-class-name: com.mysql.cj.jdbc.Driver
-          filters: stat
-          initialSize: 1
-          minIdle: 1
-          maxActive: 20
+          # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+          filters: stat,wall
+          #连接池配置
+          # 初始化大小，最小，最大
+          initialSize: 20
+          minIdle: 20
+          maxActive: 500
+          #连接等待超时时间
           maxWait: 60000
+          # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
           timeBetweenEvictionRunsMillis: 60000
+          # 配置一个连接在池中最小生存的时间，单位是毫秒
           minEvictableIdleTimeMillis: 300000
           validationQuery: select 'x'
           testWhileIdle: true
           testOnBorrow: false
           testOnReturn: false
+          # 打开PSCache，并且指定每个连接上PSCache的大小
           poolPreparedStatements: true
           maxOpenPreparedStatements: 20
+          # 配置DruidStatViewServlet
+          #监控地址：http://127.0.0.1:8083/druid/index.html
+          stat-view-servlet:
+            url-pattern: "/druid/*"
+            # IP白名单(没有配置或者为空，则允许所有访问)
+            #allow: 127.0.0.1,192.168.163.1
+            # IP黑名单 (存在共同时，deny优先于allow)
+            deny: 192.168.1.73
+            #  禁用HTML页面上的“Reset All”功能
+            reset-enable: false
+            # 登录名
+            login-username: admin
+            # 登录密码
+            login-password: 123456
