--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8083
 spring.profiles.active=dev
 #------------------jackson-----------------------
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 #------------------mybatis-----------------------
