--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -40,3 +40,19 @@ spring:
             login-username: admin
             # 登录密码
             login-password: 123456
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      # 密码 没有则可以不填
+      password:
+      # 如果使用的jedis 则将lettuce改成jedis即可
+      jedis:
+        pool:
+          # 最大活跃链接数 默认8
+          max-active: 8
+          # 最大空闲连接数 默认8
+          max-idle: 8
+          # 最小空闲连接数 默认0
+          min-idle: 0
+      # 0号数据库
+      database: 0
