--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,9 +2,9 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
-          url: jdbc:mysql://localhost:3306/item?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+          url: jdbc:mysql://localhost:3306/dxyt?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
           username: root
-          password: 123456
+          password: 123@Root
           driver-class-name: com.mysql.cj.jdbc.Driver
           # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
           filters: stat,wall
