--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <hutool.version>4.5.9</hutool.version>
         <mapstruct.version>1.2.0.Final</mapstruct.version>
         <commons-collections.verison>3.2.2</commons-collections.verison>
+        <commons-io.verison>2.6</commons-io.verison>
         <thumbnailator.version>0.4.8</thumbnailator.version>
         <gson.version>2.8.5</gson.version>
     </properties>
@@ -91,6 +92,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.verison}</version>
         </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
