--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8083
-spring.profiles.active=dev
+spring.profiles.active=pro
 #------------------jackson-----------------------
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
@@ -25,8 +25,17 @@ logging.file=log/item.log
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
-#------------------custom-----------------------
+#------------------info-----------------------
 info.build.artifact="@project.artifactId@"
 info.build.name="@project.build.finalName@"
 info.build.description="@project.description@"
 info.build.version="@project.version@"
+#---------------actuator---------------
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+management.endpoint.health.show-details=always
+management.server.port=10111
+management.server.servlet.context-path=/
+management.server.ssl.enabled=false
+
+
