--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8083
-spring.profiles.active=pro
+spring.profiles.active=dev
 #------------------jackson-----------------------
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
