--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,9 +31,13 @@ info.build.name="@project.build.finalName@"
 info.build.description="@project.description@"
 info.build.version="@project.version@"
 #---------------actuator---------------
+#启用所有的监控端点
 management.endpoints.web.exposure.include=*
+#允许应用程序正常关闭
 management.endpoint.shutdown.enabled=true
+#显示详细的健康信息
 management.endpoint.health.show-details=always
+#设置管理的端口
 management.server.port=10111
 management.server.servlet.context-path=/
 management.server.ssl.enabled=false
