--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,13 +31,13 @@ info.build.name="@project.build.finalName@"
 info.build.description="@project.description@"
 info.build.version="@project.version@"
 #---------------actuator---------------
-#启用所有的监控端点
+#\u542F\u7528\u6240\u6709\u7684\u76D1\u63A7\u7AEF\u70B9
 management.endpoints.web.exposure.include=*
-#允许应用程序正常关闭
+#\u5141\u8BB8\u5E94\u7528\u7A0B\u5E8F\u6B63\u5E38\u5173\u95ED
 management.endpoint.shutdown.enabled=true
-#显示详细的健康信息
+#\u663E\u793A\u8BE6\u7EC6\u7684\u5065\u5EB7\u4FE1\u606F
 management.endpoint.health.show-details=always
-#设置管理的端口
+#\u8BBE\u7F6E\u7BA1\u7406\u7684\u7AEF\u53E3
 management.server.port=10111
 management.server.servlet.context-path=/
 management.server.ssl.enabled=false
