--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8083
 spring.profiles.active=dev
 #------------------jackson-----------------------
+#\u9047\u5230\u7A7A\u5BF9\u8C61\u5219\u5931\u8D25 \u5982\u679C\u5B9E\u4F53\u6CA1\u6709get\u65B9\u6CD5\uFF0C\u4F1A\u62A5\u5F02\u5E38
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#\u53CD\u5E8F\u5217\u5316\u662F\u5426\u5FFD\u7565\u5927\u5C0F\u5199
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #------------------mybatis-----------------------
 mybatis.mapper-locations=classpath*:/mapper/*Mapper.xml
 mybatis.type-aliases-package=com.telecomyt.item.entity
@@ -41,5 +43,3 @@ management.endpoint.health.show-details=always
 management.server.port=10111
 management.server.servlet.context-path=/
 management.server.ssl.enabled=false
-
-
