--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -54,13 +54,13 @@ spring:
       # 如果使用的jedis 则将lettuce改成jedis即可
       jedis:
         pool:
-          # 最大活跃链接数 默认8
-          max-active: 8
-          # 最大空闲连接数 默认8
-          max-idle: 8
-          # 最小空闲连接数 默认0
-          min-idle: 0
-      # 0号数据库
+          # 最大活跃链接数
+          max-active: 500
+          # 最大空闲连接数
+          max-idle: 20
+          # 最小空闲连接数
+          min-idle: 10
+      # 数据库
       database: 4
 
 parameter:
