--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -51,8 +51,10 @@ spring:
       port: 6379
       # 密码 没有则可以不填
       password:
+      #连接池超时时间（毫秒）
+      timeout: 2000000
       # 如果使用的jedis 则将lettuce改成jedis即可
-      jedis:
+      lettuce:
         pool:
           # 最大活跃链接数
           max-active: 500
@@ -60,6 +62,8 @@ spring:
           max-idle: 20
           # 最小空闲连接数
           min-idle: 10
+          #连接池最大阻塞时间（使用负值表示没有限制）
+          max-wait: -1
       # 数据库
       database: 4
 
