--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8083
 spring.profiles.active=dev
 #------------------jackson-----------------------
-#\u9047\u5230\u7A7A\u5BF9\u8C61\u5219\u5931\u8D25 \u5982\u679C\u5B9E\u4F53\u6CA1\u6709get\u65B9\u6CD5\uFF0C\u4F1A\u62A5\u5F02\u5E38
+#忽略无法转换的对象
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-#\u53CD\u5E8F\u5217\u5316\u662F\u5426\u5FFD\u7565\u5927\u5C0F\u5199
+#大小写脱敏 默认为false  需要改为true
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -33,13 +33,13 @@ info.build.name="@project.build.finalName@"
 info.build.description="@project.description@"
 info.build.version="@project.version@"
 #---------------actuator---------------
-#\u542F\u7528\u6240\u6709\u7684\u76D1\u63A7\u7AEF\u70B9
+#启用所有的监控端点
 management.endpoints.web.exposure.include=*
-#\u5141\u8BB8\u5E94\u7528\u7A0B\u5E8F\u6B63\u5E38\u5173\u95ED
+#允许应用程序正常关闭
 management.endpoint.shutdown.enabled=true
-#\u663E\u793A\u8BE6\u7EC6\u7684\u5065\u5EB7\u4FE1\u606F
+#显示详细的健康信息
 management.endpoint.health.show-details=always
-#\u8BBE\u7F6E\u7BA1\u7406\u7684\u7AEF\u53E3
+#设置管理的端口
 management.server.port=10111
 management.server.servlet.context-path=/
 management.server.ssl.enabled=false
