设置tomcat并发数

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 server.port=8083
 spring.profiles.active=dev
+#------------------tomcat-----------------------
+server.tomcat.uri-encoding=UTF-8
+#工作线程的最大数量
+server.tomcat.max-threads=500
+#服务器接受和处理的最大连接数
+server.tomcat.max-connections=10000
+#传入连接请求的最大队列长度
+server.tomcat.accept-count=100
 #------------------jackson-----------------------
 #忽略无法转换的对象
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
