--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=25000
 mybatis.configuration.aggressiveLazyLoading=false
 #------------------logging--------------------
+logging.config=classpath:logback.xml
 logging.level.com.telecomyt.item=debug
 #logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss.SSS} [ %level ] [ %thread ] %class{1} - %M %L - %msg%xEx%n"
 logging.file=log/item.log
