--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <commons-collections.verison>3.2.2</commons-collections.verison>
         <commons-io.verison>2.6</commons-io.verison>
         <thumbnailator.version>0.4.8</thumbnailator.version>
-        <springfox.version>2.9.2</springfox.version>
+        <battcn.swagger.version>2.1.5-RELEASE</battcn.swagger.version>
     </properties>
 
     <dependencies>
@@ -140,41 +140,11 @@
             <artifactId>thumbnailator</artifactId>
             <version>${thumbnailator.version}</version>
         </dependency>
-        <!-- Swagger -->
+        <!-- Swagger 第三方非原生 -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>io.swagger</groupId>
-                    <artifactId>swagger-annotations</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>io.swagger</groupId>
-                    <artifactId>swagger-models</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>1.5.21</version>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-models</artifactId>
-            <version>1.5.21</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>swagger-bootstrap-ui</artifactId>
-            <version>1.8.4</version>
+            <groupId>com.battcn</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+            <version>${battcn.swagger.version}</version>
         </dependency>
 
     </dependencies>
