--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,27 +6,27 @@ spring.http.encoding.charset=UTF-8
 spring.messages.encoding=UTF-8
 #------------------tomcat-----------------------
 server.tomcat.uri-encoding=UTF-8
-#\u5DE5\u4F5C\u7EBF\u7A0B\u7684\u6700\u5927\u6570\u91CF
+#工作线程的最大数量
 server.tomcat.max-threads=500
-#\u670D\u52A1\u5668\u63A5\u53D7\u548C\u5904\u7406\u7684\u6700\u5927\u8FDE\u63A5\u6570
+#服务器接受和处理的最大连接数
 server.tomcat.max-connections=10000
-#\u4F20\u5165\u8FDE\u63A5\u8BF7\u6C42\u7684\u6700\u5927\u961F\u5217\u957F\u5EA6
+#传入连接请求的最大队列长度
 server.tomcat.accept-count=100
-# \u6700\u5927\u652F\u6301\u6587\u4EF6\u5927\u5C0F
+# 最大支持文件大小
 spring.servlet.multipart.max-file-size=100MB
-# \u6700\u5927\u652F\u6301\u8BF7\u6C42\u5927\u5C0F
+# 最大支持请求大小
 spring.servlet.multipart.max-request-size=100MB
 #------------------jackson-----------------------
-#\u5FFD\u7565\u65E0\u6CD5\u8F6C\u6362\u7684\u5BF9\u8C61
+#忽略无法转换的对象
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-#\u5927\u5C0F\u5199\u8131\u654F \u9ED8\u8BA4\u4E3Afalse  \u9700\u8981\u6539\u4E3Atrue
+#大小写脱敏 默认为false  需要改为true
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #------------------mybatis-----------------------
-#MyBatis\u6620\u5C04\u7A0B\u5E8F\u6587\u4EF6\u7684\u4F4D\u7F6E\u3002
+#MyBatis映射程序文件的位置。
 mybatis.mapper-locations=classpath*:/mapper/*Mapper.xml
-#\u7C7B\u578B\u522B\u540D\u7684\u5305
+#类型别名的包
 mybatis.type-aliases-package=com.qbk.*.entity
 mybatis.configuration.cacheEnabled=true
 mybatis.configuration.lazyLoadingEnabled=true
@@ -38,10 +38,10 @@ mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=25000
 mybatis.configuration.aggressiveLazyLoading=false
 #------------------logging--------------------
-#\u65E5\u5FD7\u914D\u7F6E\u6587\u4EF6\u4E2D\u53EA\u914D\u7F6E\u4E86info\u548Cerror
+#日志配置文件中只配置了info和error
 logging.config=classpath:logback.xml
-#\u60F3\u8981\u770B\u81EA\u5B9A\u4E49\u8F93\u51FA\u7684debug\u6216\u8005sql\u8BF7\u6307\u5B9A\u9879\u76EE\u8DEF\u5F84debug
-#**********\u7EBF\u4E0A\u8BF7\u6362\u6210info
+#想要看自定义输出的debug或者sql请指定项目路径debug
+#**********线上请换成info
 logging.level.com.qbk=debug
 #logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss.SSS} [ %level ] [ %thread ] %class{1} - %M %L - %msg%xEx%n"
 #logging.file=log/item.log
@@ -50,13 +50,13 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 #---------------actuator---------------
-#\u542F\u7528\u6240\u6709\u7684\u76D1\u63A7\u7AEF\u70B9
+#启用所有的监控端点
 management.endpoints.web.exposure.include=*
-#\u5141\u8BB8\u5E94\u7528\u7A0B\u5E8F\u6B63\u5E38\u5173\u95ED
+#允许应用程序正常关闭
 management.endpoint.shutdown.enabled=true
-#\u663E\u793A\u8BE6\u7EC6\u7684\u5065\u5EB7\u4FE1\u606F
+#显示详细的健康信息
 management.endpoint.health.show-details=always
-#\u8BBE\u7F6E\u7BA1\u7406\u7684\u7AEF\u53E3
+#设置管理的端口
 management.server.port=10111
 management.server.servlet.context-path=/
 management.server.ssl.enabled=false
@@ -65,34 +65,34 @@ info.build.artifact="@project.artifactId@"
 info.build.name="@project.build.finalName@"
 info.build.description="@project.description@"
 info.build.version="@project.version@"
-#1.IDEA\u6587\u4EF6\u7F16\u7801\u90FD\u4FEE\u6539\u4E3Autf-8(setting-->file encodings--->Global Encoding \u548C Project Encoding \u90FD\u8BBE\u7F6E\u4E3AUTF-8)
-#2.Properties\u6587\u4EF6\uFF0C\u91CD\u8981\u5C5E\u6027 Transparent native-to-ascii conversion \u4E3B\u8981\u7528\u4E8E\u8F6C\u6362 ascii\uFF0C\u4E00\u822C\u90FD\u8981\u52FE\u9009\uFF0C\u4E0D\u7136 Properties \u6587\u4EF6\u4E2D\u7684\u6CE8\u91CA\u663E\u793A\u7684\u90FD\u4E0D\u4F1A\u662F\u4E2D\u6587\u3002
-info.build.test=\u6D4B\u8BD5\u4E2D\u6587\u4E71\u7801
+#1.IDEA文件编码都修改为utf-8(setting-->file encodings--->Global Encoding 和 Project Encoding 都设置为UTF-8)
+#2.Properties文件，重要属性 Transparent native-to-ascii conversion 主要用于转换 ascii，一般都要勾选，不然 Properties 文件中的注释显示的都不会是中文。
+info.build.test=测试中文乱码
 #------------------swagger-----------------------
-#\u662F\u5426\u542F\u7528swagger\uFF0C\u9ED8\u8BA4\uFF1Atrue
+#是否启用swagger，默认：true
 spring.swagger.enabled=true
-#\u6807\u9898
-spring.swagger.title=qbk\u6D4B\u8BD5
-#\u63CF\u8FF0\u4FE1\u606F
-spring.swagger.description=\u53EA\u662F\u6D4B\u8BD5
-#\u7248\u672C
+#标题
+spring.swagger.title=qbk测试
+#描述信息
+spring.swagger.description=只是测试
+#版本
 spring.swagger.version="@project.version@"
-#swagger\u626B\u63CF\u7684\u57FA\u7840\u5305\uFF0C\u9ED8\u8BA4\uFF1A\u5168\u626B\u63CF
+#swagger扫描的基础包，默认：全扫描
 spring.swagger.base-package=com.qbk.web.controller
-#\u7EF4\u62A4\u4EBA
+#维护人
 spring.swagger.contact.name=qbk
-# \u5F00\u542F\u540E\u8BBF\u95EE swagger-ui.html \u4F1A\u81EA\u52A8\u8DEF\u7531\u5230\u767B\u9646\u9875\u9762\uFF0C\u4FDD\u969C\u63A5\u53E3\u4FE1\u606F\u4E0D\u88AB\u66B4\u9732
+# 开启后访问 swagger-ui.html 会自动路由到登陆页面，保障接口信息不被暴露
 spring.swagger.security.filter-plugin=true
-# \u914D\u7F6E\u8D26\u53F7\u5BC6\u7801
+# 配置账号密码
 spring.swagger.security.username=admin
 spring.swagger.security.password=123456
-#\u4E0B\u9762\u5206\u7EC4\u662F
+#下面分组是
 spring.swagger.groups.total.basePackage=com.qbk.web.controller
 spring.swagger.groups.file.basePackage=com.qbk.web.controller.file
 spring.swagger.groups.user.basePackage=com.qbk.web.controller.user
-# \u5B9A\u4E49\u5168\u5C40\u54CD\u5E94\u8FD4\u56DE
+# 定义全局响应返回
 spring.swagger.global-response-messages.POST[0].code=200
-spring.swagger.global-response-messages.POST[0].message=\u6210\u529F
+spring.swagger.global-response-messages.POST[0].message=成功
 spring.swagger.global-response-messages.POST[1].code=400
-spring.swagger.global-response-messages.POST[1].message=\u901A\u7528\u5931\u8D25
+spring.swagger.global-response-messages.POST[1].message=通用失败
 
