--- a/src/main/resources/logback.properties
+++ b/src/main/resources/logback.properties
@@ -1,8 +1,8 @@
-#error日志路径
+#error\u65E5\u5FD7\u8DEF\u5F84
 LOG_ERROR_HOME=log/error
-#info日志路径
+#info\u65E5\u5FD7\u8DEF\u5F84
 LOG_INFO_HOME=log/info
-#日志级别
-LOG_LEVEL=info
-#日志文件大小
+#\u65E5\u5FD7\u7EA7\u522B
+LOG_LEVEL=debug
+#\u65E5\u5FD7\u6587\u4EF6\u5927\u5C0F
 LOG_MAX_FILE_SIZE=10MB
