--- a/src/main/resources/logback.properties
+++ b/src/main/resources/logback.properties
@@ -3,6 +3,6 @@ LOG_ERROR_HOME=log/error
 #info\u65E5\u5FD7\u8DEF\u5F84
 LOG_INFO_HOME=log/info
 #\u65E5\u5FD7\u7EA7\u522B
-LOG_LEVEL=debug
+LOG_LEVEL=info
 #\u65E5\u5FD7\u6587\u4EF6\u5927\u5C0F
 LOG_MAX_FILE_SIZE=10MB
