--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 #\u5927\u5C0F\u5199\u8131\u654F \u9ED8\u8BA4\u4E3Afalse  \u9700\u8981\u6539\u4E3Atrue
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
 spring.jackson.time-zone=GMT+8
+#\u597D\u50CF\u5BF9 LocalDateTime \u7C7B\u4E0D\u8D77\u4F5C\u7528
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #------------------mybatis-----------------------
 #MyBatis\u6620\u5C04\u7A0B\u5E8F\u6587\u4EF6\u7684\u4F4D\u7F6E\u3002
@@ -52,7 +53,7 @@ pagehelper.supportMethodsArguments=true
 #---------------actuator---------------
 #\u542F\u7528\u6240\u6709\u7684\u76D1\u63A7\u7AEF\u70B9
 management.endpoints.web.exposure.include=*
-#\u5141\u8BB8\u5E94\u7528\u7A0B\u5E8F\u6B63\u5E38\u5173\u95ED
+#\u5141\u8BB8\u5E94\u7528\u7A0B\u5E8F\u6B63\u5E38\u5173\u95ED ,\u7EBF\u4E0A\u8BF7\u5173\u95ED
 management.endpoint.shutdown.enabled=true
 #\u663E\u793A\u8BE6\u7EC6\u7684\u5065\u5EB7\u4FE1\u606F
 management.endpoint.health.show-details=always
