解决shiro权限校验两次

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,8 @@ mybatis.configuration.aggressiveLazyLoading=false
 #\u65E5\u5FD7\u914D\u7F6E\u6587\u4EF6\u4E2D\u53EA\u914D\u7F6E\u4E86info\u548Cerror
 logging.config=classpath:logback.xml
 #\u60F3\u8981\u770B\u81EA\u5B9A\u4E49\u8F93\u51FA\u7684debug\u6216\u8005sql\u8BF7\u6307\u5B9A\u9879\u76EE\u8DEF\u5F84debug
-#**********\u7EBF\u4E0A\u8BF7\u6362\u6210info
+#\u4EE3\u7801\u4E2D\u7684\u65E5\u5FD7\u7EA7\u522B\uFF1A\u7B49\u7EA7\u7531\u4F4E\u5230\u9AD8\uFF1Adebug<info<warn<Error<Fatal
+#\u751F\u4EA7\u73AF\u5883\u7981\u6B62\u8F93\u51FA debug \u65E5\u5FD7\uFF1B\u6709\u9009\u62E9\u5730\u8F93\u51FA info \u65E5\u5FD7
 logging.level.com.qbk=debug
 #logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss.SSS} [ %level ] [ %thread ] %class{1} - %M %L - %msg%xEx%n"
 #logging.file=log/item.log
