--- a/src/main/resources/logback.properties
+++ b/src/main/resources/logback.properties
@@ -2,7 +2,8 @@
 LOG_ERROR_HOME=log/error
 #info\u65E5\u5FD7\u8DEF\u5F84
 LOG_INFO_HOME=log/info
-#\u65E5\u5FD7\u7EA7\u522B
+#\u7CFB\u7EDF\u65E5\u5FD7\u7EA7\u522B \uFF1A\u7B49\u7EA7\u7531\u4F4E\u5230\u9AD8\uFF1Adebug<info<warn<Error<Fatal
+#\u751F\u4EA7\u73AF\u5883\u7981\u6B62\u8F93\u51FA debug \u65E5\u5FD7\uFF1B\u6709\u9009\u62E9\u5730\u8F93\u51FA info \u65E5\u5FD7
 LOG_LEVEL=info
 #\u65E5\u5FD7\u6587\u4EF6\u5927\u5C0F
 LOG_MAX_FILE_SIZE=10MB
